standardize spelling of Mountmellick

--- a/life/modernized/06-chapter-5.adoc
+++ b/life/modernized/06-chapter-5.adoc
@@ -237,7 +237,7 @@ when the dread hand-writing may be seen on the wall.
 The few mourners and sorrowful spirits were sympathized with and encouraged,
 the slothful were called to arouse from their false ease,
 and I hope it was a favoured meeting.
-The 23rd my way was closed up at Mountmelick meeting,
+The 23rd my way was closed up at Mountmellick meeting,
 by feeling a strong desire in the people for words,
 and at the close I felt it my place to tell them that I believed
 they had prevented the handing forth of spiritual bread,
@@ -566,7 +566,7 @@ my dear companion was seized with a violent suffocation,
 so that if she had not been speedily relieved,
 it appeared likely that she would have been soon removed by it.
 
-"`After this, we were at Mountmelick, and paid a family visit there,
+"`After this, we were at Mountmellick, and paid a family visit there,
 having about fifty sittings, some of them close searching seasons.
 Dear Mary Ridgway belonged to that meeting, to whom my spirit was nearly united.
 We returned by Ballitore and Baltibois to Dublin, and were at several meetings.
