--- a/life/modernized/09-chapter-8.adoc
+++ b/life/modernized/09-chapter-8.adoc
@@ -186,7 +186,7 @@ far from being so circumstantial as the interest which the reader may probably f
 would induce him to desire.
 
 "`The 10th of the fourth month, 1799, I left home with my former dear companion,
-Mary Jefferys, jun.,
+Mary Jefferys, Jr.,
 under the awful prospect of paying a religious visit to the nation of Ireland,
 if the way should open,
 and it should appear practicable in the perilous state of things in that land.
