--- a/life/modernized/10-chapter-9.adoc
+++ b/life/modernized/10-chapter-9.adoc
@@ -142,7 +142,7 @@ she returned home to Melksham, which town or its neighbourhood had been her resi
 when she could be said to have a home, for nearly thirty years.
 But she soon left it again, and went to Bristol, her port of embarkation,
 in the latter part of the sixth month, accompanied by her justly dear friend,
-relation and companion, Mary Jefferys, jun.,
+relation and companion, Mary Jefferys, Jr.,
 who was also furnished with certificates of the full unity of Friends.
 About an hour before she went from home, being in her chamber,
 having only with her one of the sisters of her companion,
