--- a/life/original/08-chapter-7.adoc
+++ b/life/original/08-chapter-7.adoc
@@ -54,7 +54,7 @@ Early in the year 1794, she again obtained a certificate for visiting the North;
 which journey may be related with small variation in her own words.
 
 "`The 15th of the third month, I set out for the North,
-in company with my dear friend Mary Jefferys, jun., of Melksham,
+in company with my dear friend Mary Jefferys, Jr., of Melksham,
 intending to be at the Half-year`'s Meeting in Scotland.
 We left Melksham in the morning,
 after having been favoured together with the sweet over-shadowings of love,
@@ -177,7 +177,7 @@ in the course of which I had to inform Friends of my prospect of visiting famili
 
 "`When we returned from meeting,
 I received a letter giving an account of the death of a dearly beloved child, my cousin,
-Edward Jefferys, jun., whom I had cared for as a child of my own.
+Edward Jefferys, Jr., whom I had cared for as a child of my own.
 This information deeply affected my natural feelings, but, under the conflict,
 a sweetness not to be fully expressed covered my mind,
 with a language as though uttered by him, '`Weep not for me,
@@ -390,7 +390,7 @@ and in Somersetshire.
 She returned early in 1796, with an acknowledgment of Divine help;
 and in that year came again to the Yearly Meeting.
 As winter approached she began to prepare for another journey, and obtained a certificate.
-Her late companion, Mary Jefferys, jun.,
+Her late companion, Mary Jefferys, Jr.,
 had also the Monthly Meeting`'s concurrence in bearing her company.
 A prospect of visiting families was also before her in this journey;
 and it may be remarked that though she had now been long accustomed to such visits,
