modernize 'mine' to 'my' in certain cases

--- a/life/modernized/06-chapter-5.adoc
+++ b/life/modernized/06-chapter-5.adoc
@@ -209,7 +209,7 @@ we should have been much more favoured with the company of Christ.
 "`From Ballitore, we went to two or three other meetings, in one of which,
 I had very painful feelings, the pure Seed being greatly oppressed.
 O, how did my spirit mourn, adopting the language of that deeply tried prophet,
-when he said, '`O, that my head were waters, and mine eyes a fountain of tears,
+when he said, '`O, that my head were waters, and my eyes a fountain of tears,
 that I might weep day and night for the slain of the daughter of
 my people.`' We were enabled to deliver what appeared our duty;
 and in the afternoon, a little consolation was given to the few mourners in Zion.
