--- a/life/original/11-wiltshire-testimony.adoc
+++ b/life/original/11-wiltshire-testimony.adoc
@@ -1,4 +1,4 @@
-[#testimony1, short="Testimony of Wiltshire Meeting"]
+[short="Testimony of Wiltshire Meeting"]
 == An Abstract of the Testimony of the Monthly Meeting of Wiltshire.
 
 Our much beloved friend Sarah Stephenson,
