proof reading corrections

--- a/life/modernized/06-chapter-5.adoc
+++ b/life/modernized/06-chapter-5.adoc
@@ -302,7 +302,7 @@ and when on my feet had to speak on the advantage
 of knowing Jerusalem to be a quiet habitation,
 a place of succour in the day of storm, when we should be searched, as with candles:
 and though pretty close things opened, yet it was under the power of love, so that,
-if I felt aright.
+if I discerned correctly,
 Truth arose into a good degree of dominion, and great tenderness was in the meeting.
 O, my soul, you had indeed much cause to believe in the sufficiency of His power,
 who is the resurrection and the life.
@@ -461,8 +461,8 @@ that may be found after many days.
 "`At Cork, Youghal and Bandon together, we had about two hundred sittings;
 but what swelled the number was,
 that I was not easy without visiting those who might be termed the outcasts;
-for when reduced very low, I received this command.
-Gather the scattered, in a manner that deeply contrited my spirit:
+for when reduced very low, I received this command,
+'`Gather the scattered,`' in a manner that deeply contrited my spirit:
 and we may with reverence acknowledge,
 that the gathering arm of Divine love was wonderfully manifested,
 to the tendering of many of their minds, so that great contrition appeared.
@@ -574,7 +574,7 @@ We returned by Ballitore and Baltibois to Dublin, and were at several meetings.
 "`On the 7th of the sixth month, my spirit bowed, and was bound up in dark deep silence;
 and my mind was greatly affected lest I had offended my God,
 and I humbly desired to understand in what; but I was awfully and sweetly answered thus,
-I am in the thick darkness, as well as in the light.
+'`I am in the thick darkness, as well as in the light.`'
 The next day we left Dublin.`"
 
 It may be added, that when she delivered up her certificate to her Monthly Meeting,
