--- a/life/modernized/09-chapter-8.adoc
+++ b/life/modernized/09-chapter-8.adoc
@@ -397,7 +397,7 @@ and the life;
 that so we may more feelingly know that our '`Redeemer
 lives;`' and that because he lives we live.
 May I think nothing hard that my gracious God may be pleased
-to order for mo in this wilderness and vale of tears,
+to order for me in this wilderness and vale of tears,
 that so, when my measure of suffering is filled up,
 my exercised spirit may rest with Him who has been near in six troubles,
 and I humbly hope will not leave in the seventh;
