--- a/life/original/07-chapter-6.adoc
+++ b/life/original/07-chapter-6.adoc
@@ -336,7 +336,7 @@ and some consolation to the poor travellers Zionward, was handed forth.
 From Skipton, taking one meeting by the way, we went to Rawden;
 and had deep wading at the meeting on first-day,
 but after a considerable time of starving that thirst for vocal
-ministry which is painful to rightly exercised ministers.
+ministry which is painful to rightly exercised ministers,
 Truth arose.
 
 "`We went the same evening to dear Christiana Hustler`'s, near Bradford,
