--- a/life/original/09-chapter-8.adoc
+++ b/life/original/09-chapter-8.adoc
@@ -59,7 +59,7 @@ will show her feelings at the outset.
 
 My spirit rejoices at being favoured with the unity of the brethren.
 It is a great strength in low dipping seasons, which are often my portion.
-We have now entered the principality,1 cousin Mary Jefferys and myself;
+We have now entered the principality, cousin Mary Jefferys and myself;
 and our kind friend Joseph Naish, of Congersbury, in Somersetshire, has, I think,
 freely given up to accompany us into North Wales.
 The prospect of this mountainous country, the season of the year,
@@ -196,7 +196,7 @@ and about nine o`'clock the same evening went aboard a packet for Ireland.
 A little before we left the inn an awful but sweet covering spread over us,
 under which we were baptised, so that fear was much taken away,
 and more than usual strength seemed afforded in the needful time.
-It is thou.
+It is thou,
 Almighty Father, who art the supporter and preserver of thy poor depending children,
 under the shadow of whose wing is safety in every time of danger.
 
@@ -397,7 +397,7 @@ and the life;
 that so we may more feelingly know that our '`Redeemer
 liveth:`' and that because he liveth we live.
 May I think nothing hard that my gracious God may be pleased
-to order for mo in this wilderness and vale of tears,
+to order for me in this wilderness and vale of tears,
 that so, when my measure of suffering is filled up,
 my exercised spirit may rest with Him who has been near in six troubles,
 and I humbly hope will not leave in the seventh;
