--- a/life/original/10-chapter-9.adoc
+++ b/life/original/10-chapter-9.adoc
@@ -231,7 +231,9 @@ but not of long continuance.
 Indeed the language may justly be adopted, '`Great and marvellous are thy works,
 Lord God Almighty.
 Just and true are thy ways,
-thou King of saints.`' "`To relate all I have passed through from various causes,
+thou King of saints.`'
+
+"`To relate all I have passed through from various causes,
 would take much time and paper, and I do not feel much inclination to attempt it.
 Let it lie buried in the deep recesses of my heart until called for,
 for the benefit of poor tried travellers, or to have recourse to, for my own instruction,
@@ -363,7 +365,7 @@ in all of which she was strengthened to labour,
 under the influence of that pure love which seasoned
 her communications and evidently made way for them,
 to the edification or comfort of others, and to the peace of her mind.
-The 8th of the second month, she went to Frank ford, where, being more unwell,
+The 8th of the second month, she went to Frankford, where, being more unwell,
 and having a rash out, and the weather being cold,
 she did not attend the week-day meeting;
 but in the afternoon being met by her dear friend Sarah Harrison,
@@ -551,7 +553,7 @@ she should be left thus far from her native land and her friends there,
 Sarah seemed almost overcome with joy; and said, '`Now how glad I am, how glad I am,
 that thou hast told me this.
 It is enough, Oh,
-it is a great comfort to me.. Now I hope my good Master will soon take me to rest;
+it is a great comfort to me. Now I hope my good Master will soon take me to rest;
 and thou wilt be supported and rewarded.
 There is little here but trials, disappointments and conflicts.
 Now don`'t hold me, my dear.`"
