--- a/life/modernized/10-chapter-9.adoc
+++ b/life/modernized/10-chapter-9.adoc
@@ -551,7 +551,7 @@ she should be left thus far from her native land and her friends there,
 Sarah seemed almost overcome with joy; and said, '`Now how glad I am, how glad I am,
 that you hast told me this.
 It is enough, Oh,
-it is a great comfort to me.. Now I hope my good Master will soon take me to rest;
+it is a great comfort to me. Now I hope my good Master will soon take me to rest;
 and you will be supported and rewarded.
 There is little here but trials, disappointments and conflicts.
 Now don`'t hold me, my dear.`"
