--- a/life/original/08-chapter-7.adoc
+++ b/life/original/08-chapter-7.adoc
@@ -96,7 +96,7 @@ in which my mind was much exercised in deep travail,
 and enabled to labour in a very close manner;
 but under that covering that desires all may be gathered,
 and the dead in spirit raised from their graves of earthly mindedness,
-before the solemn language be uttered, Remove the candlesticks out of their places.
+before the solemn language be uttered, '`Remove the candlesticks out of their places.`'
 For this, my soul prays.
 My spirit felt easy in having faithfully warned them.
 
