--- a/life/modernized/05-chapter-4.adoc
+++ b/life/modernized/05-chapter-4.adoc
@@ -369,7 +369,7 @@ There is a number of valuable Friends, and some of the youth are promising.
 
 "`We went on to Lancaster and Preston,
 and at the last meeting had the company of our friends William Rathbone of Liverpool,
-and William Dilworth; and there I fell an engagement to visit the families,
+and William Dilworth; and there I felt an engagement to visit the families,
 under the influence of that love, which enables to search the camp, and to deal plainly.
 Hence, visiting some other meetings in our way, we went to Liverpool.
 My mind was dipped very low, and, under deep baptisms, we visited the families there,
