--- a/life/modernized/07-chapter-6.adoc
+++ b/life/modernized/07-chapter-6.adoc
@@ -39,7 +39,7 @@ I could not say with David, '`When I go through the valley and shadow of death,
 I will fear no evil;`' for many were my fears, and the greatest was,
 lest I should never again experience the lifting up of the
 light and life of his glorious countenance upon me.
-But this morning, being gathered into solemn stillness, my soul fell; these words,
+But this morning, being gathered into solemn stillness, my soul felt these words,
 '`My words, they are spirit, and they are life;`' and they proved so to my poor spirit,
 which was then permitted in some degree, to see the usefulness of these baptisms,
 not only to myself,
