--- a/life/modernized/09-chapter-8.adoc
+++ b/life/modernized/09-chapter-8.adoc
@@ -543,7 +543,7 @@ and have nothing whereof to boast.
 And indeed I have often wondered that such a one as I, should be called forth;
 and when I look around, and see many whose abilities are so great,
 it sinks my mind into admiration of condescending goodness to make use of me.
-May I, during the few fleeting days that are yet behind, be enabled so to steer,
+May I, during the few fleeting days that are yet ahead, be enabled so to steer,
 that my poor little bark may arrive at the haven of rest.
 
 --
