--- a/life/original/02-chapter-1.adoc
+++ b/life/original/02-chapter-1.adoc
@@ -308,4 +308,4 @@ and walk reverently before Him who is the dread of nations!
 "`I returned pretty directly from this meeting to Bristol,
 with the reward of sweet peace for this little service.
 After staying there some months, I had a letter from my uncle John Fry,
-requesting I would come to Sutton, where he resided, which 1 did.`"
+requesting I would come to Sutton, where he resided, which I did.`"
