--- a/life/original/04-chapter-3.adoc
+++ b/life/original/04-chapter-3.adoc
@@ -140,7 +140,7 @@ when I was brought to the balance of the sanctuary I should be found wanting.
 But my spirit was so enclosed in Divine sweetness, that, with brokenness of heart,
 I was enabled to adore my Maker, and pray for the continuance of his mercy and judgment,
 that thereby my soul might become so refined, that when it pleased him to say.
-Time here to thee must be no longer, I may not be found wanting; but,
+"`Time here to thee must be no longer,`" I may not be found wanting; but,
 through the deep in-working of his holy Spirit, and the abounding of his mercy,
 forgiveness and great lovingkindness,
 through the mediation of our dear Lord and Saviour, Jesus Christ,
