--- a/life/original/06-chapter-5.adoc
+++ b/life/original/06-chapter-5.adoc
@@ -524,7 +524,7 @@ under the flowing of the sweet streams of humbling consolation,
 I was led to make fresh covenant that, through the aid of his holy Spirit,
 I would willingly keep with my dear crucified Lord,
 though in a state of continued suffering, while the Seed was there,
-not desiring a release; if he would be pleased to sustain and keep in the patience,
+not desiring a release; if he would be pleased to sustain and keep me in the patience,
 to the end.
 O, may my spirit be so entirely weaned, as only to desire to be what, and where,
 best pleases my gracious Lord and Master.
