--- a/life/original/08-chapter-7.adoc
+++ b/life/original/08-chapter-7.adoc
@@ -46,7 +46,7 @@ or for both; but my exercise being, as I thought, quite unavailing,
 my spirit sunk into dejection.
 But near the close of the meeting, when mourning as a dove without its mate,
 a language was uttered in the secret of my soul, after this manner;
-Thou art precious unto me.
+"`Thou art precious unto me.
 I have graven thee on the palms of my hands.
 Thy walls are continually before me.`"
 
