--- a/life/original/05-chapter-4.adoc
+++ b/life/original/05-chapter-4.adoc
@@ -286,7 +286,7 @@ We had an old leaky boat, contrary winds, and a rough sea;
 so that our passage was attended with some danger;
 but through the preserving power of Him who formerly uttered the language of '`Peace,
 be still,`' we were favoured to get safely on shore after a passage
-of about three hours and a half My dear companion and John Rutty,
+of about three hours and a half. My dear companion and John Rutty,
 (a lad who rode before Sarah Stephenson,) were very sick,
 so that they were not so sensible of the danger as I was.
 Some of the waves were so great that it seemed as if we should be swallowed up in them.
@@ -327,7 +327,7 @@ She is a noble warrior in the Lamb`'s warfare,
 and seems to be more constantly dwelling with her Master than most.
 
 "`From Newcastle, we went to Sunderland, where we were deeply baptized for the dead, and,
-thereby 1 trust, fitted to labour and deal plainly; but we found a remnant,
+thereby I trust, fitted to labour and deal plainly; but we found a remnant,
 who retain their integrity.
 May they be preserved.
 There were upwards of twenty families.
@@ -369,7 +369,7 @@ There is a number of valuable Friends, and some of the youth are promising.
 
 "`We went on to Lancaster and Preston,
 and at the last meeting had the company of our friends William Rathbone of Liverpool,
-and William Dilworth; and there I fell an engagement to visit the families,
+and William Dilworth; and there I felt an engagement to visit the families,
 under the influence of that love, which enableth to search the camp, and to deal plainly.
 Hence, visiting some other meetings in our way, we went to Liverpool.
 My mind was dipped very low, and, under deep baptisms, we visited the families there,
@@ -417,7 +417,7 @@ and had a public meeting in the evening in the town-hall.
 In this meeting Truth arose, but my mind was not clear of the people,
 but felt that we must have another meeting, which was a close exercise,
 as my companions expressed no concern of that sort.
-Before I gave up to mention it, I was quite ill; when`" on my telling the cause,
+Before I gave up to mention it, I was quite ill; when on my telling the cause,
 they readily consented to stay,
 and another meeting was appointed to begin at nine o`'clock on first-day morning.
 We had a very solid, favoured meeting, after which my mind was much relieved.
